--- a/buyer_dashboard.html
+++ b/buyer_dashboard.html
@@ -543,7 +543,7 @@ const translations = {
       "footer.step7_title": "Fetch Credentials:",
       "footer.step7_desc": "Once seller delivers, enter your Escrow ID in the \"Fetch Credentials\" section to view and download what you purchased.",
       "footer.step8_title": "Release Payment:",
-      "footer.step8_desc": "After confirming you received everything correctly, enter your Escrow ID in \"Release Funds\" to complete the transaction and pay the seller.",
+      "footer.step8_desc": "After confirming you have received credentials/files correctly and confirmed they are working and they meet your requirements, enter your Escrow ID in \"Release Funds\" to signal the moderators to complete the transaction and pay the seller. NB: Some accounts might be IP sensitive so your seller should state that. The seller will receive 10% less as our escrow fee.",
       "footer.support_title": "💬 Need Help?",
       "footer.support_desc": "If your order takes more than 10 minutes to receive credentials after payment, or if you have any questions:",
       "footer.support_link": "Join Live Support on Slack"
@@ -620,7 +620,7 @@ const translations = {
       "footer.step7_title": "Anmeldedaten abrufen:",
       "footer.step7_desc": "Sobald der Verkäufer geliefert hat, geben Sie Ihre Escrow-ID im Abschnitt \"Anmeldedaten abrufen\" ein, um das Gekaufte anzuzeigen und herunterzuladen.",
       "footer.step8_title": "Zahlung freigeben:",
-      "footer.step8_desc": "Nachdem Sie bestätigt haben, dass Sie alles korrekt erhalten haben, geben Sie Ihre Escrow-ID unter \"Mittel freigeben\" ein, um die Transaktion abzuschließen und den Verkäufer zu bezahlen.",
+      "footer.step8_desc": "Nachdem Sie bestätigt haben, dass Sie die Anmeldedaten/Dateien korrekt erhalten haben und bestätigt haben, dass sie funktionieren und Ihren Anforderungen entsprechen, geben Sie Ihre Escrow-ID unter \"Mittel freigeben\" ein, um den Moderatoren zu signalisieren, die Transaktion abzuschließen und den Verkäufer zu bezahlen. Hinweis: Einige Konten können IP-sensitiv sein, daher sollte Ihr Verkäufer dies angeben. Der Verkäufer erhält 10% weniger als unsere Escrow-Gebühr.",
       "footer.support_title": "💬 Brauchen Sie Hilfe?",
       "footer.support_desc": "Wenn Ihre Bestellung nach der Zahlung länger als 10 Minuten dauert, um Anmeldedaten zu erhalten, oder wenn Sie Fragen haben:",
       "footer.support_link": "Live-Support auf Slack beitreten"
@@ -697,7 +697,7 @@ const translations = {
       "footer.step7_title": "Récupérer les identifiants:",
       "footer.step7_desc": "Une fois que le vendeur a livré, entrez votre ID d'escrow dans la section \"Récupérer les identifiants\" pour voir et télécharger ce que vous avez acheté.",
       "footer.step8_title": "Libérer le paiement:",
-      "footer.step8_desc": "Après avoir confirmé que vous avez tout reçu correctement, entrez votre ID d'escrow dans \"Libérer les fonds\" pour finaliser la transaction et payer le vendeur.",
+      "footer.step8_desc": "Après avoir confirmé que vous avez reçu les identifiants/fichiers correctement et confirmé qu'ils fonctionnent et répondent à vos exigences, entrez votre ID d'escrow dans \"Libérer les fonds\" pour signaler aux modérateurs de finaliser la transaction et de payer le vendeur. NB: Certains comptes peuvent être sensibles à l'IP, votre vendeur devrait donc le préciser. Le vendeur recevra 10% de moins en tant que frais d'escrow.",
       "footer.support_title": "💬 Besoin d'aide?",
       "footer.support_desc": "Si votre commande prend plus de 10 minutes pour recevoir les identifiants après le paiement, ou si vous avez des questions:",
       "footer.support_link": "Rejoindre le support en direct sur Slack"
@@ -774,7 +774,7 @@ const translations = {
       "footer.step7_title": "Recupera le credenziali:",
       "footer.step7_desc": "Una volta che il venditore ha consegnato, inserisci il tuo ID Escrow nella sezione \"Recupera credenziali\" per visualizzare e scaricare ciò che hai acquistato.",
       "footer.step8_title": "Rilascia il pagamento:",
-      "footer.step8_desc": "Dopo aver confermato di aver ricevuto tutto correttamente, inserisci il tuo ID Escrow in \"Rilascia fondi\" per completare la transazione e pagare il venditore.",
+      "footer.step8_desc": "Dopo aver confermato di aver ricevuto correttamente le credenziali/file e confermato che funzionano e soddisfano i tuoi requisiti, inserisci il tuo ID Escrow in \"Rilascia fondi\" per segnalare ai moderatori di completare la transazione e pagare il venditore. NB: Alcuni account potrebbero essere sensibili all'IP, quindi il tuo venditore dovrebbe indicarlo. Il venditore riceverà il 10% in meno come commissione escrow.",
       "footer.support_title": "💬 Hai bisogno di aiuto?",
       "footer.support_desc": "Se il tuo ordine impiega più di 10 minuti per ricevere le credenziali dopo il pagamento, o se hai domande:",
       "footer.support_link": "Unisciti al supporto dal vivo su Slack"
@@ -851,7 +851,7 @@ const translations = {
       "footer.step7_title": "Obtener credenciales:",
       "footer.step7_desc": "Una vez que el vendedor entregue, ingrese su ID de Escrow en la sección \"Obtener credenciales\" para ver y descargar lo que compró.",
       "footer.step8_title": "Liberar pago:",
-      "footer.step8_desc": "Después de confirmar que recibió todo correctamente, ingrese su ID de Escrow en \"Liberar fondos\" para completar la transacción y pagar al vendedor.",
+      "footer.step8_desc": "Después de confirmar que ha recibido las credenciales/archivos correctamente y confirmado que funcionan y cumplen con sus requisitos, ingrese su ID de Escrow en \"Liberar fondos\" para señalar a los moderadores que completen la transacción y paguen al vendedor. NB: Algunas cuentas pueden ser sensibles a la IP, por lo que su vendedor debe indicarlo. El vendedor recibirá un 10% menos como tarifa de escrow.",
       "footer.support_title": "💬 ¿Necesita ayuda?",
       "footer.support_desc": "Si su pedido tarda más de 10 minutos en recibir credenciales después del pago, o si tiene preguntas:",
       "footer.support_link": "Únase al soporte en vivo en Slack"
