--- a/seller_dashboard.html
+++ b/seller_dashboard.html
@@ -890,7 +890,7 @@ const translations = {
       "footer.step4_desc": "Once you've submitted delivery to moderators, the buyer will be notified to fetch and review the credentials/files. The buyer will test the credentials to ensure they work and meet the agreed requirements. If everything is correct, the buyer will release payment. If there are issues, our moderators will mediate between both parties for fair resolution.",
 
       "footer.step5_title": "Receive Payment:",
-      "footer.step5_desc": "After the buyer confirms and releases payment, funds will be transferred to your saved withdrawal method. Note that a 10% escrow fee is deducted from the total amount as our service charge. For example, if the escrow is $100, you'll receive $90. Track payment status in the \"My Escrows\" tab.",
+     "footer.step5_desc": "After the buyer confirms that your work or credentials are as per the agreement you had with them, our moderators will releases payment. Funds will be transferred to your saved withdrawal method. Note that a 10% escrow fee is deducted from the total amount as our service charge. For example, if the escrow is $100, you'll receive $90. Track payment status in the "My Escrows" tab.",
 
       "footer.step6_title": "Important Notes:",
       "footer.step6_desc": "Always deliver exactly as agreed with the buyer. For account credentials that are IP-sensitive, clearly state this to the buyer beforehand. Never share credentials directly with the buyer - always submit through our moderators for your protection. If disputes arise, contact us immediately on Slack for mediation.",
@@ -965,7 +965,7 @@ const translations = {
 "footer.step4_desc": "Sobald Sie die Lieferung an die Moderatoren eingereicht haben, wird der Käufer benachrichtigt, die Anmeldedaten/Dateien abzurufen und zu überprüfen. Der Käufer wird die Anmeldedaten testen, um sicherzustellen, dass sie funktionieren und den vereinbarten Anforderungen entsprechen. Wenn alles korrekt ist, wird der Käufer die Zahlung freigeben. Bei Problemen werden unsere Moderatoren zwischen beiden Parteien für eine faire Lösung vermitteln.",
 
 "footer.step5_title": "Zahlung erhalten:",
-"footer.step5_desc": "Nachdem der Käufer bestätigt und die Zahlung freigegeben hat, werden die Gelder auf Ihre gespeicherte Auszahlungsmethode überwiesen. Beachten Sie, dass eine Escrow-Gebühr von 10% vom Gesamtbetrag als unsere Servicegebühr abgezogen wird. Zum Beispiel, wenn das Escrow 100 $ beträgt, erhalten Sie 90 $. Verfolgen Sie den Zahlungsstatus auf der Registerkarte \"Meine Escrows\".",
+"footer.step5_desc": "Sobald der Käufer bestätigt hat, dass Ihre Arbeit oder Ihre Referenzen dem mit ihm getroffenen Agreement entsprechen, geben unsere Moderatoren die Zahlung frei. Der Betrag wird auf Ihre gespeicherte Auszahlungsmethode überwiesen. Bitte beachten Sie, dass eine Escrow-Gebühr von 10 % vom Gesamtbetrag als unsere Servicegebühr abgezogen wird. Beispiel: Bei einem Escrow-Betrag von 100 $ erhalten Sie 90 $. Sie können den Zahlungsstatus im Reiter „Meine Escrows“ verfolgen.",
 
 "footer.step6_title": "Wichtige Hinweise:",
 "footer.step6_desc": "Liefern Sie immer genau wie mit dem Käufer vereinbart. Bei Kontoanmeldedaten, die IP-sensitiv sind, teilen Sie dies dem Käufer im Voraus klar mit. Teilen Sie niemals Anmeldedaten direkt mit dem Käufer - reichen Sie sie immer über unsere Moderatoren zu Ihrem Schutz ein. Wenn Streitigkeiten auftreten, kontaktieren Sie uns sofort auf Slack zur Vermittlung.",
@@ -1041,7 +1041,7 @@ const translations = {
 "footer.step4_desc": "Une fois que vous avez soumis la livraison aux modérateurs, l'acheteur sera notifié pour récupérer et examiner les identifiants/fichiers. L'acheteur testera les identifiants pour s'assurer qu'ils fonctionnent et répondent aux exigences convenues. Si tout est correct, l'acheteur libérera le paiement. En cas de problèmes, nos modérateurs médieront entre les deux parties pour une résolution équitable.",
 
 "footer.step5_title": "Recevoir le paiement:",
-"footer.step5_desc": "Après que l'acheteur confirme et libère le paiement, les fonds seront transférés vers votre méthode de retrait enregistrée. Notez qu'une commission d'escrow de 10% est déduite du montant total comme frais de service. Par exemple, si l'escrow est de 100 $, vous recevrez 90 $. Suivez l'état du paiement dans l'onglet \"Mes Escrows\".",
+"footer.step5_desc": "Une fois que l'acheteur a confirmé que votre travail ou vos références correspondent à l'accord conclu avec lui, nos modérateurs libèrent le paiement. Les fonds seront transférés vers votre méthode de retrait enregistrée. Notez qu'une commission d'escrow de 10 % est déduite du montant total en tant que frais de service. Par exemple, si l'escrow est de 100 $, vous recevrez 90 $. Suivez le statut du paiement dans l'onglet « Mes Escrows ».",
 
 "footer.step6_title": "Notes importantes:",
 "footer.step6_desc": "Livrez toujours exactement comme convenu avec l'acheteur. Pour les identifiants de compte sensibles à l'IP, indiquez-le clairement à l'acheteur à l'avance. Ne partagez jamais les identifiants directement avec l'acheteur - soumettez-les toujours via nos modérateurs pour votre protection. En cas de litiges, contactez-nous immédiatement sur Slack pour médiation.",
@@ -1116,8 +1116,7 @@ const translations = {
 "footer.step4_desc": "Una volta inviata la consegna ai moderatori, l'acquirente verrà notificato per recuperare e rivedere le credenziali/file. L'acquirente testerà le credenziali per assicurarsi che funzionino e soddisfino i requisiti concordati. Se tutto è corretto, l'acquirente rilascerà il pagamento. In caso di problemi, i nostri moderatori medieranno tra entrambe le parti per una risoluzione equa.",
 
 "footer.step5_title": "Ricevi il pagamento:",
-"footer.step5_desc": "Dopo che l'acquirente conferma e rilascia il pagamento, i fondi verranno trasferiti al tuo metodo di prelievo salvato. Nota che una commissione escrow del 10% viene detratta dall'importo totale come nostro costo di servizio. Ad esempio, se l'escrow è di 100 $, riceverai 90 $. Traccia lo stato del pagamento nella scheda \"I Miei Escrow\".",
-
+"footer.step5_desc": "Dopo che l'acquirente ha confermato che il tuo lavoro o le tue credenziali sono conformi all'accordo che avevate, i nostri moderatori rilasceranno il pagamento. I fondi verranno trasferiti sul tuo metodo di prelievo salvato. Tieni presente che verrà detratta una commissione escrow del 10% sull'importo totale come costo del nostro servizio. Ad esempio, se l'escrow è di 100 $, riceverai 90 $. Puoi tenere traccia dello stato del pagamento nella scheda « I miei Escrow ».",
 "footer.step6_title": "Note importanti:",
 "footer.step6_desc": "Consegna sempre esattamente come concordato con l'acquirente. Per le credenziali di account sensibili all'IP, dichiaralo chiaramente all'acquirente in anticipo. Non condividere mai le credenziali direttamente con l'acquirente - invia sempre tramite i nostri moderatori per la tua protezione. Se sorgono controversie, contattaci immediatamente su Slack per la mediazione.",
 
@@ -1192,7 +1191,7 @@ es: {
 "footer.step4_desc": "Una vez que haya enviado la entrega a los moderadores, se notificará al comprador para que obtenga y revise las credenciales/archivos. El comprador probará las credenciales para asegurarse de que funcionen y cumplan con los requisitos acordados. Si todo es correcto, el comprador liberará el pago. Si hay problemas, nuestros moderadores mediarán entre ambas partes para una resolución justa.",
 
 "footer.step5_title": "Recibir el pago:",
-"footer.step5_desc": "Después de que el comprador confirme y libere el pago, los fondos se transferirán a su método de retiro guardado. Tenga en cuenta que se deduce una tarifa de escrow del 10% del monto total como nuestro cargo de servicio. Por ejemplo, si el escrow es de $100, recibirá $90. Rastree el estado del pago en la pestaña \"Mis Escrows\".",
+"footer.step5_desc": "Una vez que el comprador confirme que tu trabajo o credenciales cumplen con el acuerdo que tenían, nuestros moderadores liberarán el pago. Los fondos se transferirán al método de retiro que tienes guardado. Ten en cuenta que se deduce una comisión de escrow del 10 % del monto total como cargo por nuestro servicio. Por ejemplo, si el escrow es de $100, recibirás $90. Puedes seguir el estado del pago en la pestaña «Mis Escrows».",
 
 "footer.step6_title": "Notas importantes:",
 "footer.step6_desc": "Entregue siempre exactamente como se acordó con el comprador. Para credenciales de cuenta sensibles a la IP, indíquelo claramente al comprador de antemano. Nunca comparta credenciales directamente con el comprador - envíelas siempre a través de nuestros moderadores para su protección. Si surgen disputas, contáctenos inmediatamente en Slack para mediación.",
