--- a/seller_dashboard.html
+++ b/seller_dashboard.html
@@ -890,7 +890,7 @@ const translations = {
       "footer.step4_desc": "Once you've submitted delivery to moderators, the buyer will be notified to fetch and review the credentials/files. The buyer will test the credentials to ensure they work and meet the agreed requirements. If everything is correct, the buyer will release payment. If there are issues, our moderators will mediate between both parties for fair resolution.",
 
       "footer.step5_title": "Receive Payment:",
-     "footer.step5_desc": "After the buyer confirms that your work or credentials are as per the agreement you had with them, our moderators will releases payment. Funds will be transferred to your saved withdrawal method. Note that a 10% escrow fee is deducted from the total amount as our service charge. For example, if the escrow is $100, you'll receive $90. Track payment status in the "My Escrows" tab.",
+    "footer.step5_desc": "After the buyer confirms that your work or credentials are as per the agreement you had with them, our moderators will release payment. Funds will be transferred to your saved withdrawal method. Note that a 10% escrow fee is deducted from the total amount as our service charge. For example, if the escrow is $100, you'll receive $90. Track payment status in the \"My Escrows\" tab.",
 
       "footer.step6_title": "Important Notes:",
       "footer.step6_desc": "Always deliver exactly as agreed with the buyer. For account credentials that are IP-sensitive, clearly state this to the buyer beforehand. Never share credentials directly with the buyer - always submit through our moderators for your protection. If disputes arise, contact us immediately on Slack for mediation.",
